opa-gatekeeper/test.yml
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
    gatekeeper: "true"
